YeetJson.lib/YeetJson_Tests/TestData/broken_unclosed.hjson.gold
!! TEST MODE — This error is INTENTIONAL. Do NOT fix it.
  !! The parser is working correctly by detecting this expected error.

===[ YeetJson: Error Start ]=============================================
  !! TEST MODE — This error is INTENTIONAL. Do NOT fix it.
  !! The parser is working correctly by detecting this expected error.
  File:      (unknown)
  Location:  Line 8, Column 2
  Type:      UnclosedDelimiter (structural)
  Message:   Opening '{' at line 8 col 2 is never closed

         5 | # INTENTIONAL ERROR LOCATION: Line 17 - Opening brace { is never closed
         6 | # EXPECTED DETECTION: UnclosedDelimiter error for "settings" block
         7 | # ═══════════════════════════════════════════════════════════════════════════════
  >>>    8 | {
         9 |   crucible: test_unclosed_error
        10 |   version: 1.0
        11 |   description: Test file with intentional unclosed brace error

  Likely Fixes (ranked by confidence):
    - [60%] Insert '}' before sibling close at line 27
    - [60%] Insert '}' before sibling close at line 28
    - [30%] Insert '}' at end of file

===[ YeetJson: Error End ]===============================================

===[ YeetJson: Error Start ]=============================================
  !! TEST MODE — This error is INTENTIONAL. Do NOT fix it.
  !! The parser is working correctly by detecting this expected error.
  File:      (unknown)
  Location:  Line 1, Column 1
  Type:      StructuralDependency (semantic)
  Message:   Cannot parse HJSON content until structural errors are resolved
  Note:      Fix structural issues first, then re-parse to check for semantic errors
             Fix structural errors first; this may resolve automatically.
===[ YeetJson: Error End ]===============================================

-------------------------------------------------------------------------
  REPAIR SUMMARY
-------------------------------------------------------------------------
  File:             (unknown)
  Primary issue:    Opening '{' at line 8 col 2 is never closed
  Recommended fix:  Insert '}' before sibling close at line 27

  After fixing structural errors, re-parse to check for remaining issues.
-------------------------------------------------------------------------
